--- a/halaman-profil-bandung/index.html
+++ b/halaman-profil-bandung/index.html
@@ -145,7 +145,7 @@
 
       <!-- Konten samping -->
       <aside>
-        <article class="profile">
+        <article class="profile card">
           <header>
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
